@@ -1,3 +1,10 @@
+2006-10-26  Ben Elliston  <bje@au.ibm.com>
+
+	* elf.c (bfd_elf_set_dyn_lib_class): Change second argument type
+	from int to enum dynamic_lib_link_class lib_class.
+	* bfd-in.h (bfd_elf_set_dyn_lib_class): Likewise.
+	* bfd-in2.h: Regenerate.
+
 2006-10-25  Alan Modra  <amodra@bigpond.net.au>
 	    Trevor Smigiel  <Trevor_Smigiel@playstation.sony.com>
 	    Yukishige Shibata  <shibata@rd.scei.sony.co.jp>
